fixed spacing on appointments and timeslots views

--- a/public/stylesheets/peanut.css
+++ b/public/stylesheets/peanut.css
@@ -8,6 +8,8 @@ a.current, a.current:hover                        { color: #000000; text-decorat
 a:hover                                           { background-color: #0033BB; color: #FFFFFF; text-decoration: none; }
 */
 
+a.current, a.current:hover                        { text-decoration: none; }
+
 a img                                             { border: 0 none; vertical-align: top; }
 
 a img:hover                                       { background-color: green; }
